# qc-hash

./: .releaserc  CHANGELOG.md  CMakeLists.txt
.github/workflows/: release.yml
cmake/: get-latest-cpm.cmake
include/: qc-hash.hpp
