cmake_minimum_required(VERSION 3.24)

project(qc-hash)

cmake_minimum_required(VERSION 3.30)
project(qc-hash VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_DEBUG_POSTFIX d)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/std:c++20)
endif()

add_library(${PROJECT_NAME} INTERFACE)

file(GLOB HEADER_FILES "include/*.hpp")
install(FILES ${HEADER_FILES} DESTINATION include)
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Config
    FILE_SET HEADERS
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    RUNTIME DESTINATION bin
    INCLUDES DESTINATION include)
	
export(TARGETS ${PROJECT_NAME}
	NAMESPACE ${PROJECT_NAME}::
	FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
)
	
install(EXPORT ${PROJECT_NAME}Config
	DESTINATION "${CMAKE_INSTALL_PREFIX}/lib/cmake/${PROJECT_NAME}"
	NAMESPACE ${PROJECT_NAME}::
)